Fix tooltip not showing when user attempts to rate their own track

--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -343,3 +343,9 @@
   font-size: 24px;
   color: transparent;
 }
+
+.DisabledStar {
+  cursor: not-allowed;
+  opacity: 0.5;
+  display: inline-block;
+}
